[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oncoresolve"
version = "1.0.0"
description = "A High-Hygiene Explainable AI and Patient-Centric Uniqueness Framework for Breast Cancer Subtyping"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Shubham Jha", email = "shubhamkjha369@gmail.com"}
]

requires-python = ">=3.8"

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "lifelines>=0.27.0"
]

keywords = ["bioinformatics", "breast-cancer", "machine-learning", "explainable-ai"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
OncoResolve = ["models/*.pkl"]
